fix publication img-txt overlap on mac

--- a/themes/bicycle/static/css/agency.css
+++ b/themes/bicycle/static/css/agency.css
@@ -619,7 +619,7 @@ section h3.section-subheading {
     }
 }
 
-@media(min-width:992px) {
+@media(min-width:1000px) {
     .timeline>li {
         min-height: 150px;
     }
@@ -647,7 +647,7 @@ section h3.section-subheading {
 
 @media(min-width:1200px) {
     .timeline>li {
-        min-height: 170px;
+        min-height: 150px;
     }
 
     .timeline>li .timeline-panel {
@@ -655,8 +655,8 @@ section h3.section-subheading {
     }
 
     .timeline>li .timeline-image {
-        width: 170px;
-        height: 170px;
+        width: 150px;
+        height: 150px;
         margin-left: -85px;
     }
 
